Changelog for GoogleSiteMap.

GoogleSiteMap 1.3.0
====================================
- [#13] Add &excludeChildrenOf, which can take a comma-separated list of parents to exclude all children of

GoogleSiteMap 1.2.1
====================================
- [#1] Add ability to make sitemap from a specific Resource via startId property
- [#4] Fix issue where children of non-published resources were not showing
- [#5] Fix issue where children of non-searchable resources were not showing

GoogleSiteMap 1.2
====================================
- Fix reference URL for schema
- Fix reference to 0.9
- Update schema to 0.90

GoogleSiteMap 1.1
====================================
- Added maxDepth, excludeResources properties
- Refactored to work with overridable chunks for templates
- Fixed URL generation bug where home URL was incorrectly generating
- Updated copyright information
- i18n of properties

GoogleSiteMap 1.0
====================================
- Updated package build for Revo RC1
- Added fix for when editedon is empty (thanks Andrey Federov!) 
- Added changelog